# visualization.linuxwhatelse.pictureit

./: CMakeLists.txt
src/: addon.cpp
visualization.linuxwhatelse.pictureit/: addon.xml
visualization.linuxwhatelse.pictureit/resources/: settings.xml
visualization.linuxwhatelse.pictureit/resources/language/resource.language.en_gb/: strings.po
